blue-green-rollouts-demo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: blue-green-rollouts-demo
spec:
  replicas: 5
  strategy:
    blueGreen: 
      activeService: blue-green-rollouts-demo
      previewService: blue-green-rollouts-demo-preview
      autoPromotionEnabled: false
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: blue-green-rollouts-demo
  template:
    metadata:
      labels:
        app: blue-green-rollouts-demo
    spec:
      containers:
      - name: blue-green-rollouts-demo
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
