blue-green-rollouts-demo/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-green-rollouts-demo-preview
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: blue-green-rollouts-demo
