blue-green-rollouts-demo/ingress-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-rollouts-demo-preview
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: blue-green-rollouts-demo-preview.192.168.1.61.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-green-rollouts-demo-preview
                port:
                  number: 80
